NOTICKET: Fix buttons stuck together on plugin dialog

--- a/src/components/plugin-selector-dialog.less
+++ b/src/components/plugin-selector-dialog.less
@@ -5,6 +5,10 @@
   justify-content: space-between;
 }
 
+.PluginSelectorDialog-footerButtonGroup {
+  .m-control-group;
+}
+
 .PluginSelectorDialog-pasteButton {
   .m-icon-button;
 }
