--- a/src/plugins/combined-multitrack-media/combined-multitrack-media.less
+++ b/src/plugins/combined-multitrack-media/combined-multitrack-media.less
@@ -24,7 +24,7 @@
   }
 
   .MultitrackMediaPlayer {
-    margin: -15px;
+    margin: -@edu-content-padding;
     margin-top: 0;
   }
 }
